--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leviatham - @PapaLucker111</title>
+    <title>Leviatham</title>
     <style>
         /* --- ESTILOS GLOBALES (Sin cambios) --- */
         body {
@@ -414,7 +414,7 @@
         </div>
 
         <div class="final-btn-container">
-            <a href="t.me/PapaLucker111" target="_blank" class="final-btn">@PapaLucker111</a>
+            <a href="https://t.me/PapaLucker111" target="_blank" class="final-btn">@PapaLucker111</a>
         </div>
 
     </div>
@@ -422,3 +422,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
