--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leviatham - @PapaLucker111</title>
+    <title>Leviatham Herramientas</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         /* --- ESTILOS GLOBALES (Sin cambios) --- */
         body {
@@ -580,7 +581,7 @@ nmap -sV -sC [IP_Objetivo]
         </div>
 
         <div class="final-btn-container">
-            <a href="t.me/PapaLucker111" target="_blank" class="final-btn">@PapaLucker111</a>
+            <a href="t.me/fafaLuck111" target="_blank" class="final-btn">@fafaLuck111</a>
         </div>
 
     </div>
@@ -588,3 +589,4 @@ nmap -sV -sC [IP_Objetivo]
     <script src="script.js"></script>
 </body>
 </html>
+
